--- a/slider/css/style.css
+++ b/slider/css/style.css
@@ -36,6 +36,10 @@
         width: 30%;
         padding: 20px;
     }
+    
+    .under-construction {
+        background: #48A115!important;
+    }
 	
 	
 /***********************************/
@@ -144,7 +148,7 @@
 				padding-left: 5px;
 			}
 				#subpanel-3-top {
-					height: 100%;
+					height: 50%;
 					position: relative;
 				}
 				
