--- a/slider/templates/masters.html
+++ b/slider/templates/masters.html
@@ -4,27 +4,13 @@
         <li>
             <a href="#">Import ufo...</a>
         </li>
-        <li>
-            <a href="#">Copy From Project...</a>
-        </li>
         <li class="divider"></li>
         <li>
-            <a href="#">Set Scripts…</a>
-        </li>
-        <li class="divider"></li>
-        <li>
-            <a href="#">Quick Export...</a>
+            <a href="#">Duplicate</a>
         </li>
         <li class="divider"></li>
         <li>
             <a href="#">Delete...</a>
-        </li>
-        <li class="divider"></li>
-        <li>
-            <a href="#">Create Sequence</a>
-        </li>
-        <li>
-            <a href="#">Delete Sequence...</a>
         </li>
     </ul>
 </div>
