--- a/slider/templates/designspace.html
+++ b/slider/templates/designspace.html
@@ -35,7 +35,7 @@
             <div class="slider-input-container" ng-repeat="axis in data.designSpaces[data.currentDesignSpace].axes" ng-style="{'top': ($index * 50 + 45) + 'px'}">
                 <input ng-model="data.designSpaces[data.currentDesignSpace].axes[$index].value" class="slider-input-output">%
             </div>
-            <select class="left-label-select" ng-change="changeMainMaster()" ng-model="data.designSpaces[data.currentDesignSpace].mainMaster" ng-options="index as master.master.name for (index, master) in data.designSpaces[data.currentDesignSpace].masters" ng-style="{'top': ((data.designSpaces[data.currentDesignSpace].masters.length - 2) * 50 + 43) + 'px'}" ng-if="data.designSpaces[data.currentDesignSpace].masters.length > 2"></select>
+            <select class="left-label-select" ng-change="changeMainMaster()" ng-model="data.designSpaces[data.currentDesignSpace].mainMaster" ng-options="index as findMaster(master.masterId).name for (index, master) in data.designSpaces[data.currentDesignSpace].masters" ng-style="{'top': ((data.designSpaces[data.currentDesignSpace].masters.length - 2) * 50 + 43) + 'px'}" ng-if="data.designSpaces[data.currentDesignSpace].masters.length > 2"></select>
         </control>
         <explore ng-if="data.designSpaces[data.currentDesignSpace].type == 'Explore'"></explore>
         <button ng-if="data.designSpaces[data.currentDesignSpace].type == 'Control' && data.designSpaces[data.currentDesignSpace].masters.length == 3" class="triangle-button" ng-click="data.designSpaces[data.currentDesignSpace].triangle = !data.designSpaces[data.currentDesignSpace].triangle">
