--- a/slider/templates/instances.html
+++ b/slider/templates/instances.html
@@ -29,7 +29,7 @@
     </li>
 </ul>
 <b>Current Designspace:</b><br>
-{{data.designSpaces[data.currentDesignSpace]}}<br><br>
+{{data.currentDesignSpace}}<br><br>
 <b>Current Instance:</b><br>
 {{currentInstance}}
 
