--- a/slider/css/style.css
+++ b/slider/css/style.css
@@ -15,7 +15,8 @@
 		margin: 0;
 		height: 100%;
 		width: 100%;
-		font-family: "Lato";
+		font-family: "Roboto";
+		font-size: 13px;
 		background: #d7d2c8;
 	}
 	
@@ -669,9 +670,15 @@
     .unconfigured {
         background: #ddd;
     }
+    
+    .design-space-container {
+        width: 100%;
+        height: 100%;
+    }
 
     .choose-space-type {
         width: 50%;
+        height: 100%;
         float: left;
         text-align: center;
         padding-top: 5%;
@@ -899,6 +906,7 @@
                 cursor: pointer;
                 text-align: center;
                 border-right: 1px solid #000;
+                background: #fff;
             }
 
         .sequence-name {
@@ -1111,4 +1119,5 @@
                 cursor: pointer;
                 text-align: center;
                 border-right: 1px solid #000;
+                background: #fff;
             }
