--- a/slider/css/style.css
+++ b/slider/css/style.css
@@ -888,7 +888,6 @@
             margin: 0;
             padding: 0;
         }
-
             
         #masters-tools {
             position: absolute;
@@ -909,115 +908,106 @@
                 background: #fff;
             }
 
-        .sequence-name {
-            margin-left: 24px;
-            padding: 4px 10px;
-            width: 50%;
-            color: #ddd;
-            cursor: pointer;
-            background: #fff;
-            border-top-left-radius: 4px;
-            border-top-right-radius: 4px;
-            border: 1px solid #ddd;
-            border-bottom: 0px;
-        }
-        
-            .sequence-name.selected {
-               background: #f85c37; 
-               color: #fff;
-            }
 
-        .sequence {
-            border-top: 1px solid #ffa392;
+
+
+/****** list *****/
+
+
+    .list-name {
+        margin-left: 24px;
+        padding: 4px 10px;
+        width: 50%;
+        color: #ddd;
+        cursor: pointer;
+        background: #fff;
+        border-top-left-radius: 4px;
+        border-top-right-radius: 4px;
+        border: 1px solid #ddd;
+        border-bottom: 0px;
+    }
+        
+        .list-name.selected {
+           background: #f85c37; 
+           color: #fff;
+        }
+
+    .list-ul {
+        border-top: 1px solid #ffa392;
+        width: 100%;
+        background: #ddd; 
+        margin-bottom: 10px;
+    }
+
+        .list-li {
             width: 100%;
-            background: #ddd; 
-            margin-bottom: 10px;
+            height: 28px;
+            background: #fff;
+            border-bottom: 1px solid #ffa392;
         }
-
-            .master {
-                width: 100%;
-                height: 28px;
-                background: #fff;
-                border-bottom: 1px solid #ffa392;
-            }
         
-                .diamond {
-                    float: left;
-                    width: 24px;
-                    height: 28px;
-                    position: relative;
-                    cursor: pointer;
-                }
+            .list-sequence-col {
+                float: left;
+                width: 24px;
+                height: 28px;
+                position: relative;
+            }
                     
-                .diamond-fix {
+                .list-sequence-col .diamond {
                     width: 100%;
                     height: 100%;
                 }
                 
-                    .start .diamond-fix {
+                    .list-sequence-col.start .diamond {
                         background-image: url('../img/diamonds/diamond-top.png');
                     }
                     
-                    .middle .diamond-fix {
+                    .list-sequence-col.middle .diamond {
                         background-image: url('../img/diamonds/diamond-full.png');
                     }
                     
-                    .end .diamond-fix {
+                    .list-sequence-col.end .diamond {
                         background-image: url('../img/diamonds/diamond-bottom.png');
                     }
                     
-                    .solo .diamond-fix {
+                    .list-sequence-col.solo .diamond {
                         background-image: url('../img/diamonds/diamond-sole.png');
                     }
-            
-                .diamond-clone, .diamonddrag:hover {
-                    position: absolute;
-                    width: 12px;
-                    height: 12px;
-                    border-radius: 6px;
-                    border: 3px solid #0ff;
-                    background: #000;
-                    z-index: 11;
-                    left: 14px;
-                    top: 14px;
-                    cursor: pointer;
-                }
-
                     
-                /* while dragging */
-                .ui-sortable-helper {
-                    background: #fff;
-                    box-shadow: 3px 3px 3px rgba(0,0,0,0.5);
-                }
+                    /* while dragging */
+                    .ui-sortable-helper {
+                        background: #fff;
+                        box-shadow: 3px 3px 3px rgba(0,0,0,0.5);
+                    }
                 
-                    .ui-sortable-helper > .diamond > .diamond-fix {
+                    .ui-sortable-helper .list-sequence-col .diamond-fix {
                         background-image: url('../img/diamonds/diamond.png')!important;
                     }
                 
-        .selectable-ag {
+        .list-view-col {
             float: left;
             text-align: center;
             width: 32px;
             height: 100%;
-            padding: 2px;
+            padding: 4px;
             background: #fff;
-            cursor: pointer;
+            cursor: default;
         }
         
-            .selectable-ag.selected {
+            .list-view-col.selected {
                 background: #f85c37;
             }
             
-        .master-name {
+        .list-edit-col {
             float: left;
             width: calc(100% - 56px);
             height: 100%;
-            padding: 2px 10px;
-            cursor: move;
+            padding: 4px 10px;
             background: #fff;
+            cursor: default;
         }
         
-          .master-name.selected {
+          .list-edit-col.selected {
                 background: #f85c37;
             }
             
