--- a/slider/templates/masters.html
+++ b/slider/templates/masters.html
@@ -17,14 +17,13 @@
 
 <ul>
     <li ng-repeat="sequence in data.sequences">
-        <ul ui-sortable="sortableOptionsMasters" ng-model="sequence.masters" class="sequence">
-            
-            <li ng-repeat="master in sequence.masters" class="master" ng-class="{selected: master.edit}">
-                <span class="diamond" ng-class="{start : $first && !$last, end : $last, middle : $middle, solo : $first && $last}" ng-mouseover="whileDrag(master, $index)" ng-mousedown="startDrag(master, $index)">
-                    <div class="diamond-fix" ng-class="{diamonddrag: !$middle}"></div>
+        <ul ui-sortable="sortableOptionsMasters" ng-model="sequence.masters" class="list-ul">
+            <li ng-repeat="master in sequence.masters" class="list-li" ng-class="{selected: master.edit}">
+                <span class="list-sequence-col" ng-class="{start : $first && !$last, end : $last, middle : $middle, solo : $first && $last}" ng-mouseover="whileDrag(master, $index)" ng-mousedown="startDrag(master, $index)">
+                    <div class="diamond"></div>
                 </span>
-                <span class="selectable-ag" ng-click="master.display = !master.display" ng-class="{'selected': master.display}" style="font-family:'{{master.fontFamily}}'; font-weight:{{master.weight}};">Ag</span>
-                <span class="master-name" ng-click="selectMastersForEdit(master, $parent.$index, $index)" ng-class="{'selected': master.edit}">
+                <span class="list-view-col" ng-click="master.display = !master.display" ng-class="{'selected': master.display}" style="font-family:'{{master.fontFamily}}'; font-weight:{{master.weight}};">Ag</span>
+                <span class="list-edit-col" ng-click="selectMastersForEdit(master, $parent.$index, $index)" ng-class="{'selected': master.edit}">
                     {{master.name}}
                 </span>
             </li>
