--- a/slider/css/style.css
+++ b/slider/css/style.css
@@ -37,15 +37,12 @@
         width: 30%;
         padding: 20px;
     }
-    
-    .under-construction {
-        background: #48A115!important;
-        color: #99D676;
-        padding: 16px;
-    }
+
+
 	
 	
-/***********************************/
+/****** menu *****/
+	
 	
 	#menu {
 		width: 100%;
@@ -79,6 +76,12 @@
 				background: #f85c37;
 				color: #000;
 			}
+			
+			
+			
+			
+/****** framework *****/
+	
 	
 	#pagewrap {
 		width: 100%;
@@ -108,114 +111,43 @@
 				border: 4px solid #d7d2c8;
 			}
 			
-			#subpanel-3-top.sub-panel {
-			    overflow: visible;
-			}
+			.semi-panel {
+			    height: 50%;
+		    }
+			
+            underconstruction {
+                display: block;
+                background: #48A115!important;
+                color: #99D676;
+                padding: 16px;
+            }
+            
+            specimen, masters, designspace, instances, parameters {
+                display: block;
+                position: relative;
+            }
+            
+                masters.sub-panel {
+                    overflow: visible;
+                }
 			
 			#panel-1 {
 				width: calc(3/42 * 100%);
 			}
 			
-    			 parameters {
-    			     display: block;
-    			     background: #fff;
-    			     height: 50%;
-    			 }
-    			 
-    			 #sub-parameters {
-    			     height: 50%;
-    			 }
-			
 			#panel-2 {
 				width: calc(10/42 * 100%);
 			}
-			
-				#specimen-toolbar {
-					padding-bottom: 12px;
-					border-bottom: 1px solid #ddd;
-				}
-				
-				.specimen-info-holder {
-					text-align: center;
-				}
-			
-					.specimen-info {
-					    text-align: left;
-					    display: inline-block;
-						padding: 8px;
-						font-size: 9px;
-						text-transform: uppercase;
-						text-align: center;
-						background: #ddd;
-					}
-			
-				.specimen {
-					padding: 20px 0 40px 0;
-					border-bottom: 1px solid #ddd;
-				}
-			
+						
 			#panel-3 {
 				position: relative;
 				width: calc(3/42 * 100%);
-				padding-left: 5px;
 			}
-				#subpanel-3-top {
-					height: 50%;
-					position: relative;
-				}
-				
-				#subpanel-3-bottom {
-					height: 50%;
-					position: relative;
-				}
-				
-					.masters-add-item {
-						display: none;
-						position: absolute;
-						bottom: 0;
-						margin: 8px;
-					}
-			
+
 			#panel-4 {
 				width: calc(10/42 * 100%);
 				position: relative;
 			}
-			
-				#subpanel-4-top {
-					position: relative;
-					height: 50%;
-				}
-				
-					.block {
-						width: 200px;
-						height: 200px;
-						border-radius: 50%;
-						position: absolute;
-						opacity: 0.5;
-					}
-					
-					#block-1 {
-						background: #f00;
-						left: 30px;
-						top: 30px;
-					}
-					
-					#block-2 {
-						background: #ff0;
-						left: 180px;
-						top: 30px;
-					}
-					
-					#block-3 {
-						background: #00f;
-						left: 105px;
-						top: 105px;
-					}
-			
-				#subpanel-4-bottom {
-					height: 50%;
-				}
-				
 		
 			#panel-5 {
 				width: calc(3/42 * 100%);
@@ -226,35 +158,11 @@
 				width: calc(4/42 * 100%);
 				position: relative;
 			}
-			
-				#font-mapping-export {
-					position: absolute;
-					bottom: 0;
-					right: 0;
-					margin: 8px;
-				}
-			
-				.mapping {
-					width: 100%;
-					padding: 8px;
-					border-bottom: 1px solid #f85c37;
-					cursor: pointer;
-				}
-				
-				.mapping.selected {
-				    background: #f85c37;
-				    border-bottom: 1px solid #fff;
-				}
-				
-			
+
 			#panel-7 {
 				width: calc(9/42 * 100%);
 				position: relative;
 			}
-			
-				#meta-data input {
-					margin-bottom: 12px;
-				}
 
 
 
@@ -508,6 +416,31 @@
 /******************* specimen ********************/
 
 
+    #specimen-toolbar {
+        padding-bottom: 12px;
+        border-bottom: 1px solid #ddd;
+    }
+    
+    .specimen-info-holder {
+        text-align: center;
+    }
+
+        .specimen-info {
+            text-align: left;
+            display: inline-block;
+            padding: 8px;
+            font-size: 9px;
+            text-transform: uppercase;
+            text-align: center;
+            background: #ddd;
+        }
+
+    .specimen {
+        padding: 20px 0 40px 0;
+        border-bottom: 1px solid #ddd;
+    }
+
+
     #specimen {
         background: #fff;
         width: 800px;
@@ -667,10 +600,6 @@
         height: 12px;
         width: 12px;
         margin-right: 4px;
-    }
-    
-    designspace {
-        height: 100%;
     }
 
     .design-space {
@@ -903,7 +832,7 @@
             
         #masters-tools {
             position: absolute;
-            bottom: 0;
+            bottom: 4px;
             left: 0;
             width: 100%;
             border-top: 1px solid #000;
